# blursday_assistant

./: .Rhistory  README.md  blursday_analysis_v1.py  blursday_analysis_v2.py  blursday_analysis_v3.py  blursday_assistant_v12.py  blursday_assistant_v13.py  blursday_assistant_v14.py  blursday_assistant_v15.py  blursday_assistant_v18.py  blursday_assistant_v20.py  blursday_assistant_v22.py  blursday_assistant_v23.py  blursday_assistant_v33.py  blursday_assistant_v42.py  blursday_assistant_v7.py  blursday_assistant_v9.py  parsed_responses.xlsx  parsed_responses_clean_wide.xlsx  summary_statistics.xlsx  ~$parsed_responses_clean_wide.xlsx
blursday_assistant/: pyproject.toml
old_data/: parsed_responses_11Apr_run_intermediatefile_1.xlsx  parsed_responses_US-UK-CAN_27-Mar-2024_chunksize_10.xlsx  parsed_responses_chunksize_10_2apr2024.xlsx
output_data/: parsed_responses_extracted.xlsx  parsed_responses_extracted2.xlsx  parsed_responses_extracted3.xlsx  parsed_responses_extracted3_clean_wide_for_analysis.xlsx  parsed_responses_extracted4.xlsx  parsed_responses_extracted4_clean_wide_for_analysis.xlsx  parsed_responses_extracted_clean_wide_for_analysis.xlsx
superseded/: assistant_v1.py  assistant_v2.py  assistant_v3.py  assistant_v4.py  assistant_v5.py  blursday_analysis_v1.py  blursday_analysis_v2.py  blursday_assistant_v10.py  blursday_assistant_v11.py  blursday_assistant_v12.py  blursday_assistant_v13.py  blursday_assistant_v15.py  blursday_assistant_v16.py  blursday_assistant_v17.py  blursday_assistant_v18.py  blursday_assistant_v19.py  blursday_assistant_v21.py  (+28 more)
(+18 files in other folders)
