[tool.poetry]
name = "blursday-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blursday_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openai = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
