[tool.poetry]
name = "blursday-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blursday_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openai = "^1.14.3"
openpyxl = "^3.1.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
