[tool.poetry]
name = "blursday-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blursday_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openai = "^1.14.3"
openpyxl = "^3.1.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pydantic = "^2.9.2"
pymupdf = "^1.24.11"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
